# progetto_finale

progetto_finale/: CMakeLists.txt  README copy.txt  README.txt
progetto_finale-main_con_CommandManager/progetto_finale/: Makefile
progetto_finale-main_con_CommandManager/progetto_finale/include/: CMakeList.txt  CommandManager.h
progetto_finale-main_con_CommandManager/progetto_finale/src/: DeviceManager.cpp  device_implementation.cpp  main_program.cpp
progetto_finale/include/: CommandManager.h  Device.h  DeviceManager.h
progetto_finale/log/: log_esempio1.txt  log_esempio1_commentato.txt  log_esempio2.txt  log_esempio2_commentato.txt
progetto_finale/src/: DeviceManager.cpp  device_implementation.cpp  main_program.cpp
progetto_finale_senza_CommandManager/progetto_finale/include/: Device.h  DeviceManager.h
progetto_finale_senza_CommandManager/progetto_finale/src/: DeviceManager.cpp  main_program.cpp
riorganizzazione progetto/progetto_finale/include/: ConsumptionManager.h  DeviceManager.h  TimeManager.h
riorganizzazione progetto/progetto_finale/src/: Consumption.cpp  DeviceManager.cpp  TimeManager.cpp  main_program.cpp
